Added more section to the form and get all values

--- a/form.html
+++ b/form.html
@@ -77,10 +77,12 @@
                 </div>
             </div>
 
+            <!-- education section  -->
             <div id="education" class="section">
                 <h2>Education</h2>
                 <div class="educationSectionContainer">
-                    <div class="sectionIn educationIn">
+                    <!-- Elemet will come here on click addSectionBtn using typescript -->
+                    <!-- <div class="sectionIn educationIn">
                         <button type="button" class="toggleSubSectionBtn">
                             <span>(not specified)</span>
                             <div>
@@ -102,7 +104,7 @@
                                 <div class="inputContainer">
                                     <label for="educationStartAndEndDate">Start & End Date</label>
                                     <input type="text" id="educationStartAndEndDate" name="educationStartAndEndDate"
-                                        placeholder="e.g. 2020-2024">
+                                        placeholder="e.g. May 2020 - Jan 2022">
                                 </div>
                             </div>
                             <div class="inputContainer">
@@ -111,15 +113,17 @@
                                     placeholder="Any hounors or awards recieved"></textarea>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <Button type="button" class="addSectionBtn">+ Add education</Button>
             </div>
 
+            <!-- work experience section  -->
             <div id="workExperience" class="section">
                 <h2>Work Experience</h2>
                 <div class="workExperienceSectionContainer">
-                    <div class="sectionIn workIn">
+                    <!-- Elemet will come here on click addSectionBtn using typescript -->
+                    <!-- <div class="sectionIn workIn">
                         <button type="button" class="toggleSubSectionBtn">
                             <span>(not specified)</span>
                             <div>
@@ -140,8 +144,8 @@
                                 </div>
                                 <div class="inputContainer">
                                     <label for="jobStartAndEndDate">Start & End Date</label>
-                                    <input type="text" id="jobStartAndEndDate" name="jobStartAndEndYear"
-                                        placeholder="e.g. 2020-2024">
+                                    <input type="text" id="jobStartAndEndDate" name="jobStartAndEndDate"
+                                        placeholder="e.g. May 2020 - Jan 2022">
                                 </div>
                             </div>
                             <div class="inputContainer">
@@ -150,26 +154,30 @@
                                     placeholder="Key Responsibilities and Achievements"></textarea>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <Button type="button" class="addSectionBtn">+ Add work experience</Button>
             </div>
 
+            <!-- skill section  -->
             <div id="skills" class="section">
                 <h2>Skills</h2>
                 <div class="skillContainer">
-                    <div>
+                    <!-- Elemet will come here on click addSectionBtn using typescript -->
+                    <!-- <div>
                         <input type="text" name="skill" id="skill" class="smallInput">
                         <i class="fa-solid fa-circle-xmark"></i>
-                    </div>
+                    </div> -->
                 </div>
                 <Button type="button" class="addSectionBtn">+ Add skill</Button>
             </div>
 
-            <!-- <div id="workExperience" class="section">
-                <h2>Courses & Certifications</h2>
-                <div class="workExperienceSectionContainer">
-                    <div class="sectionIn workIn">
+            <!-- courses section  -->
+            <div id="courses" class="section">
+                <h2>Courses and Certifications</h2>
+                <div class="courseSectionContainer">
+                    <!-- Elemet will come here on click addSectionBtn using typescript -->
+                    <!-- <div class="sectionIn courseIn">
                         <button type="button" class="toggleSubSectionBtn">
                             <span>(not specified)</span>
                             <div>
@@ -178,34 +186,80 @@
                             </div>
                         </button>
 
-                        <div class="workSubSection disappear" id="workExperience1">
+                        <div class="courseSubSection disappear">
                             <div class="flex">
                                 <div class="inputContainer">
-                                    <label for="courseName">Course Name</label>
-                                    <input type="text" id="courseName" name="courseName">
+                                    <label for="courseTitle">course</label>
+                                    <input type="text" id="courseTitle" name="courseTitle">
                                 </div>
                                 <div class="inputContainer">
-                                    <label for="courseInstitutionName">Institution Name</label>
+                                    <label for="courseInstitutionName">institute/Plateform</label>
                                     <input type="text" id="courseInstitutionName" name="courseInstitutionName">
                                 </div>
                                 <div class="inputContainer">
-                                    <label for="startAndEndYear">Start & End Year</label>
-                                    <input type="text" id="startAndEndYear" name="startAndEndYear"
-                                        placeholder="e.g. 2020-2024">
+                                    <label for="courseCompletionDate">Completion Date</label>
+                                    <input type="text" id="courseCompletionDate" name="courseCompletionDate"
+                                        placeholder="e.g. May 2023">
                                 </div>
                             </div>
                             <div class="inputContainer">
-                                <label for="jobDescription">Description</label>
-                                <textarea type="text" id="jobDescription" name="jobDescription"
-                                    placeholder="Key Responsibilities and Achievements"></textarea>
+                                <label for="courseDescription">Description (optional)</label>
+                                <textarea type="text" id="courseDescription" name="courseDescription"
+                                    placeholder="A brief description of the course or certification"></textarea>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
-                <Button type="button" class="addSectionBtn">+ Add  work experience</Button>
-            </div> -->
+                <Button type="button" class="addSectionBtn">+ Add course or certification</Button>
+            </div>
 
+            <!-- projects section  -->
+            <div id="projects" class="section">
+                <h2>Projects</h2>
+                <div class="projectSectionContainer">
+                    <!-- Elemet will come here on click addSectionBtn using typescript -->
+                    <!-- <div class="sectionIn projectIn">
+                        <button type="button" class="toggleSubSectionBtn">
+                            <span>(not specified)</span>
+                            <div>
+                                <i class="fa-solid fa-trash" id="delItem"></i>
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </div>
+                        </button>
 
+                        <div class="projectSubSection disappear">
+                            <div class="flex">
+                                <div class="inputContainer">
+                                    <label for="projectTitle">Project Title</label>
+                                    <input type="text" id="projectTitle" name="projectTitle">
+                                </div>
+                                <div class="inputContainer">
+                                    <label for="technologyUsed">Technologies Used</label>
+                                    <input type="text" id="technologyUsed" name="technologyUsed"  placeholder="Keep separated by comma (,)">
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <div class="inputContainer">
+                                    <label for="projectGithubLink">Github Link</label>
+                                    <input type="text" id="projectGithubLink" name="projectGithubLink">
+                                </div>
+                                <div class="inputContainer">
+                                    <label for="projectWebsiteLink">Website Link</label>
+                                    <input type="text" id="projectWebsiteLink" name="projectWebsiteLink" >
+                                </div>
+                            </div>
+                            <div class="inputContainer">
+                                <label for="courseDescription">Description</label>
+                                <textarea type="text" id="courseDescription" name="courseDescription"
+                                   ></textarea>
+                            </div>
+                        </div>
+                    </div> -->
+                </div>
+                <Button type="button" class="addSectionBtn">+ Add Project</Button>
+            </div>
+
+            <!-- submit form button  -->
             <button class="sBtn">Create Resume</button>
         </form>
     </div>
