get and add form data to local storage and also fixed the bugs

--- a/form.html
+++ b/form.html
@@ -82,38 +82,6 @@
                 <h2>Education</h2>
                 <div class="educationSectionContainer">
                     <!-- Elemet will come here on click addSectionBtn using typescript -->
-                    <!-- <div class="sectionIn educationIn">
-                        <button type="button" class="toggleSubSectionBtn">
-                            <span>(not specified)</span>
-                            <div>
-                                <i class="fa-solid fa-trash" id="delItem"></i>
-                                <i class="fa-solid fa-chevron-down"></i>
-                            </div>
-                        </button>
-
-                        <div class="educationSubSection disappear" id="education1">
-                            <div class="flex">
-                                <div class="inputContainer">
-                                    <label for="qualification">Degree or Qualification</label>
-                                    <input type="text" id="qualification" name="qualification">
-                                </div>
-                                <div class="inputContainer">
-                                    <label for="institutionName">Institution Name</label>
-                                    <input type="text" id="institutionName" name="institutionName">
-                                </div>
-                                <div class="inputContainer">
-                                    <label for="educationStartAndEndDate">Start & End Date</label>
-                                    <input type="text" id="educationStartAndEndDate" name="educationStartAndEndDate"
-                                        placeholder="e.g. May 2020 - Jan 2022">
-                                </div>
-                            </div>
-                            <div class="inputContainer">
-                                <label for="educationDescription">Description</label>
-                                <textarea type="text" id="educationDescription" name="educationDescription"
-                                    placeholder="Any hounors or awards recieved"></textarea>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
                 <Button type="button" class="addSectionBtn">+ Add education</Button>
             </div>
@@ -123,38 +91,6 @@
                 <h2>Work Experience</h2>
                 <div class="workExperienceSectionContainer">
                     <!-- Elemet will come here on click addSectionBtn using typescript -->
-                    <!-- <div class="sectionIn workIn">
-                        <button type="button" class="toggleSubSectionBtn">
-                            <span>(not specified)</span>
-                            <div>
-                                <i class="fa-solid fa-trash" id="delItem"></i>
-                                <i class="fa-solid fa-chevron-down"></i>
-                            </div>
-                        </button>
-
-                        <div class="workSubSection disappear" id="workExperience1">
-                            <div class="flex">
-                                <div class="inputContainer">
-                                    <label for="jobTitle">Job Title</label>
-                                    <input type="text" id="jobTitle" name="jobTitle">
-                                </div>
-                                <div class="inputContainer">
-                                    <label for="companyName">Company Name</label>
-                                    <input type="text" id="companyName" name="companyName">
-                                </div>
-                                <div class="inputContainer">
-                                    <label for="jobStartAndEndDate">Start & End Date</label>
-                                    <input type="text" id="jobStartAndEndDate" name="jobStartAndEndDate"
-                                        placeholder="e.g. May 2020 - Jan 2022">
-                                </div>
-                            </div>
-                            <div class="inputContainer">
-                                <label for="jobDescription">Description</label>
-                                <textarea type="text" id="jobDescription" name="jobDescription"
-                                    placeholder="Key Responsibilities and Achievements"></textarea>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
                 <Button type="button" class="addSectionBtn">+ Add work experience</Button>
             </div>
@@ -164,51 +100,15 @@
                 <h2>Skills</h2>
                 <div class="skillContainer">
                     <!-- Elemet will come here on click addSectionBtn using typescript -->
-                    <!-- <div>
-                        <input type="text" name="skill" id="skill" class="smallInput">
-                        <i class="fa-solid fa-circle-xmark"></i>
-                    </div> -->
                 </div>
                 <Button type="button" class="addSectionBtn">+ Add skill</Button>
             </div>
 
             <!-- courses section  -->
             <div id="courses" class="section">
-                <h2>Courses and Certifications</h2>
+                <h2>Courses & Certifications</h2>
                 <div class="courseSectionContainer">
                     <!-- Elemet will come here on click addSectionBtn using typescript -->
-                    <!-- <div class="sectionIn courseIn">
-                        <button type="button" class="toggleSubSectionBtn">
-                            <span>(not specified)</span>
-                            <div>
-                                <i class="fa-solid fa-trash" id="delItem"></i>
-                                <i class="fa-solid fa-chevron-down"></i>
-                            </div>
-                        </button>
-
-                        <div class="courseSubSection disappear">
-                            <div class="flex">
-                                <div class="inputContainer">
-                                    <label for="courseTitle">course</label>
-                                    <input type="text" id="courseTitle" name="courseTitle">
-                                </div>
-                                <div class="inputContainer">
-                                    <label for="courseInstitutionName">institute/Plateform</label>
-                                    <input type="text" id="courseInstitutionName" name="courseInstitutionName">
-                                </div>
-                                <div class="inputContainer">
-                                    <label for="courseCompletionDate">Completion Date</label>
-                                    <input type="text" id="courseCompletionDate" name="courseCompletionDate"
-                                        placeholder="e.g. May 2023">
-                                </div>
-                            </div>
-                            <div class="inputContainer">
-                                <label for="courseDescription">Description (optional)</label>
-                                <textarea type="text" id="courseDescription" name="courseDescription"
-                                    placeholder="A brief description of the course or certification"></textarea>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
                 <Button type="button" class="addSectionBtn">+ Add course or certification</Button>
             </div>
@@ -218,43 +118,6 @@
                 <h2>Projects</h2>
                 <div class="projectSectionContainer">
                     <!-- Elemet will come here on click addSectionBtn using typescript -->
-                    <!-- <div class="sectionIn projectIn">
-                        <button type="button" class="toggleSubSectionBtn">
-                            <span>(not specified)</span>
-                            <div>
-                                <i class="fa-solid fa-trash" id="delItem"></i>
-                                <i class="fa-solid fa-chevron-down"></i>
-                            </div>
-                        </button>
-
-                        <div class="projectSubSection disappear">
-                            <div class="flex">
-                                <div class="inputContainer">
-                                    <label for="projectTitle">Project Title</label>
-                                    <input type="text" id="projectTitle" name="projectTitle">
-                                </div>
-                                <div class="inputContainer">
-                                    <label for="technologyUsed">Technologies Used</label>
-                                    <input type="text" id="technologyUsed" name="technologyUsed"  placeholder="Keep separated by comma (,)">
-                                </div>
-                            </div>
-                            <div class="flex">
-                                <div class="inputContainer">
-                                    <label for="projectGithubLink">Github Link</label>
-                                    <input type="text" id="projectGithubLink" name="projectGithubLink">
-                                </div>
-                                <div class="inputContainer">
-                                    <label for="projectWebsiteLink">Website Link</label>
-                                    <input type="text" id="projectWebsiteLink" name="projectWebsiteLink" >
-                                </div>
-                            </div>
-                            <div class="inputContainer">
-                                <label for="courseDescription">Description</label>
-                                <textarea type="text" id="courseDescription" name="courseDescription"
-                                   ></textarea>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
                 <Button type="button" class="addSectionBtn">+ Add Project</Button>
             </div>
