--- a/form.html
+++ b/form.html
@@ -26,6 +26,10 @@
                         <label for="lastName">Last Name:</label>
                         <input type="text" id="lastName" name="lastName">
                     </div>
+                    <div class="inputContainer">
+                        <label for="photo">Upload Photo:</label>
+                        <input style="padding: 4.5px ;" type="file" accept="image/*" id="photo" name="photo">
+                    </div>
                 </div>
                 <div class="inputContainer">
                     <label for="jobTitleApplyFor">Job Title</label>
