make first template

--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
                     development process and enhance the scalability of my projects. JavaScript and Type Script 💻🚀
                 </p>
             </div>
-            <div id="employmentHistorySection">
+            <div id="workExperienceSection">
                 <h1>Employment History</h1>
                 <div>
                     <h2>MERN Stack Developer, Company Name</h2>
@@ -141,6 +141,7 @@
     </div>
 
     <script src="./js/resume.js"></script>
+
 </body>
 
 </html>
